# psdk_dji_linetransmission

./: .gitignore  CMakeLists.txt  DJI_CREDENTIALS.md  GUIA_CONFIGURACAO.md  GUIA_RASPBERRY_PI.md  INSTRUCOES_GITHUB.md  LICENSE  README.md  RESUMO_PROJETO.md  requirements.txt
config/: config.json  dji_credentials.json  psdk_config.json
install_scripts/: install.sh  install_psdk_raspberry.sh  transfer_to_pi.sh
python/: servo_pwm.py  simple_test.py  test_dji_connection.py
src/: main.cpp  servo_controller.cpp  servo_controller.h
